# django_portfolio

./: README.md  manage.py  pyproject.toml
APIs/: functions.py  typehints_sample.py  typehints_sample2.py  typehints_sample3.py  urls.py  views.py
APIs/management/commands/: postcode_search.py
accounts/: admin.py  forms.py  functions.py  models.py  urls.py  views.py
accounts/management/commands/: seed_users.py
accounts/migrations/: 0001_initial.py
accounts/static/accounts/css/: users.css
accounts/templates/accounts/: all_users.html  all_users_list.html  all_users_values.html  customize_queryset.html
acrobat_paro/: admin.py  apps.py  functions.py  models.py  urls.py  views.py
acrobat_paro/management/commands/: seed_users.py
acrobat_paro/migrations/: 0001_initial.py  0002_partner_company.py
acrobat_paro/templates/acrobat_paro/: menu.html  users.html
crud_components/: apps.py  urls.py  views.py
django_portfolio/: asgi.py  settings.py  urls.py
form_components/: apps.py  forms.py  urls.py  views.py
form_components/static/form_components/css/: style.css
form_components/templates/form_components/: BS_checkbox.html  BS_form.html  BS_form_by_class.html  classform.html  form.html  pulldown_menu.html  sample.html  session.html
resume/: __init__.py  apps.py  urls.py  views.py
resume/static/resume/css/: home.css
resume/templates/resume/: home.html
scripts/: postcode_search.py
was_works/: apps.py  urls.py  views.py
was_works/static/was_works/css/: was_works.css
was_works/templates/was_works/: was_works.html
